--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </button>
 </a>
 
-<audio src="./Audio/song2.mp3" controls autoplay hidden loop></audio>
+<audio autoplay loop>
+  <source src="./Audio/song2.mp3" type="audio/mpeg">
+  <source src="./Audio/song2.wav" type="audio/wav">
+</audio>
 <div class="paper heart">
 
 </div>
